--- a/Source/Pekspro.RadioStorm.MAUI/Views/GroupHeaderControl.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Views/GroupHeaderControl.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Pekspro.RadioStorm.MAUI.Views.GroupHeaderControl"
              >
-    <Grid RowDefinitions="Auto, Auto" RowSpacing="4" Margin="{OnPlatform 0, WinUI='-4,0,0,0', Android='16,12,16,0'}">
+    <Grid RowDefinitions="Auto, Auto" RowSpacing="4" Margin="{OnPlatform WinUI='-4,0,0,0', Default='16,12,16,0'}">
         <Label Grid.Row="0" Text="{Binding Header}" Style="{StaticResource ListGroupTextStyle}" />
         <Rectangle Grid.Row="1" Style="{StaticResource Separator}" />
     </Grid>
