Adjust HyperlinkButton style.

--- a/Source/Pekspro.RadioStorm.MAUI/App.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/App.xaml
@@ -122,7 +122,8 @@
             <Style x:Key="HyperlinkButton" TargetType="Button">
                 <Setter Property="TextColor" Value="{AppThemeBinding Dark={StaticResource HyperlinkColorDark}, Light={StaticResource HyperlinkColorLight}}" />
                 <Setter Property="BackgroundColor" Value="Transparent" />
-                <Setter Property="Padding" Value="4,8" />
+                <Setter Property="HeightRequest" Value="36" />
+                <Setter Property="Padding" Value="4,0" />
                 <Setter Property="Margin" Value="-4,0,0,0" />
                 <Setter Property="BorderWidth" Value="0" />
                 <Setter Property="HorizontalOptions" Value="Start" />
