--- a/Source/Pekspro.RadioStorm.MAUI/App.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/App.xaml
@@ -44,7 +44,9 @@
             <x:Double x:Key="FontSizeHeader">20</x:Double>
             <x:Double x:Key="FontSizeNormal">13</x:Double>
             <x:Double x:Key="FontSizeDetails">12</x:Double>
-            <x:Double x:Key="HeaderFavoriteStarSize">16</x:Double>
+            <OnPlatform x:Key="HeaderFavoriteStarSize" x:TypeArguments="x:Double" Default="16">
+                <On Platform="WinUI">20</On>
+            </OnPlatform>
             <x:Double x:Key="ListItemImageSize">64</x:Double>
             <x:Double x:Key="DefaultSwipeThreshold">160</x:Double>
             
@@ -63,11 +65,12 @@
             <Style x:Key="ListItemTitleArea" TargetType="Grid">
                 <Setter Property="Margin" Value="0,0,0,0" />
                 <Setter Property="VerticalOptions" Value="Start" />
-                <Setter Property="HeightRequest" Value="38" />
+                <Setter Property="HeightRequest" Value="28" />
             </Style>
 
             <Style x:Key="ListItemContentArea" TargetType="Grid">
                 <Setter Property="VerticalOptions" Value="Start" />
+                <Setter Property="Padding" Value="0,4,0,0" />
                 <Setter Property="HeightRequest" Value="44" />
             </Style>
             
