--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Channel/ChannelControl.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Channel/ChannelControl.xaml
@@ -48,7 +48,7 @@
         <Image WidthRequest="{StaticResource HeaderFavoriteStarSize}" 
                HeightRequest="{StaticResource HeaderFavoriteStarSize}" 
                Grid.Column="0"
-               Margin="{OnPlatform WinUI='0,0,4,8', Default='0,0,4,10'}" 
+               Margin="{OnPlatform WinUI='0,8,4,8', Default='0,10,4,10'}" 
                IsVisible="{Binding IsFavorite, Mode=OneWay}">
             <Image.Source>
                 <FontImageSource
@@ -82,10 +82,9 @@
             Grid.Row="0"
             Grid.Column="0"
             Grid.ColumnSpan="2"
-            Margin="-2,0,2,0"
+            Margin="{OnPlatform WinUI='-2,-2,2,0', Default='-2,-4,2,0'}"
             />
-
-        <!-- Style="{StaticResource ListNormalTextStyle}" -->
+        
         <Label Grid.Row="1"
 				Grid.Column="0"
 				Text="{Binding Status.CurrentTimePeriod.StartTimeString, Mode=OneWay}"
