--- a/Source/Pekspro.RadioStorm.MAUI/Views/PlayerButtonsControl.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Views/PlayerButtonsControl.xaml
@@ -27,4 +27,9 @@
                  Source="{StaticResource PlayList}"
                  IsVisible="{Binding HasPlayList}" 
                  />
+    <ImageButton Command="{Binding ToogleMenuCommand}"
+                 Style="{x:StaticResource PlayerButton}"
+                 Source="{StaticResource Menu}"
+                 />
+    
 </HorizontalStackLayout>
