--- a/Source/Pekspro.RadioStorm.MAUI/Views/PlayerControl.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Views/PlayerControl.xaml
@@ -67,6 +67,8 @@
 
     <views:CurrentPlayingControl Grid.Row="4" />
 
+    <Button Grid.Row="4" Command="{Binding ToogleMenuCommand}" BackgroundColor="Transparent" BorderColor="Transparent" BorderWidth="0" />
+
     <Grid Grid.Row="4"
           Grid.Column="1"
           Margin="8,0,0,0"
@@ -85,8 +87,8 @@
                HorizontalOptions="Center"
                VerticalOptions="Center"
                />
-
     </Grid>
+    
     <views:PlayerButtonsControl Grid.Row="4" Grid.Column="2" />
 
     <views:PlayerPositionControl Grid.Row="5" Grid.ColumnSpan="3" IsVisible="{Binding IsCurrentItemEpisode}" />
