--- a/Source/Pekspro.RadioStorm.MAUI/Views/PlayerControl.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Views/PlayerControl.xaml
@@ -5,91 +5,136 @@
             xmlns:r="clr-namespace:Pekspro.RadioStorm.UI.Resources;assembly=Pekspro.RadioStorm.UI"
             x:Class="Pekspro.RadioStorm.MAUI.Views.PlayerControl"             
             x:DataType="player:PlayerViewModel"
-      
             IsVisible="{Binding CurrentItem, Converter={StaticResource NullToIsVisibleConverter}}"
-            BackgroundColor="{AppThemeBinding Dark={StaticResource PanelBackgroundDark}, Light={StaticResource PanelBackgroundLight}}"
             >
-    <!--HeightRequest="{Binding IsCurrentItemLiveAudio, Converter={StaticResource LiveAudioToHeightConverter}}"-->
+
     <Grid.RowDefinitions>
-        <RowDefinition Height="auto" />
-        <RowDefinition Height="auto" />
-        <RowDefinition Height="auto" />
-        <RowDefinition Height="auto" />
-        <RowDefinition Height="auto" />
+        <RowDefinition Height="*" />
         <RowDefinition Height="auto" />
     </Grid.RowDefinitions>
-    <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="*" />
-        <ColumnDefinition Width="Auto" />
-        <ColumnDefinition Width="Auto" />
-    </Grid.ColumnDefinitions>
 
-    <Grid Grid.Row="0" Padding="8" ColumnDefinitions="auto, auto, auto, *, auto" Grid.ColumnSpan="3"
-          IsVisible="{Binding IsMenuOpen}">
-        <Picker Grid.Column="0"
-                ItemsSource="{Binding SleepTimes}"
-                SelectedIndex="{Binding SleepTimeIndex, Mode=TwoWay}"
-                Margin="{OnPlatform Default='0', WinUI='0,6,0,0'}"
-                IsVisible="{Binding IsSleepTimerNotRunning}"
-                />
+    <!--HeightRequest="{Binding IsCurrentItemLiveAudio, Converter={StaticResource LiveAudioToHeightConverter}}"-->
 
-        <Button Grid.Column="0" 
-                Text="{Binding StopSleepTimerText}" 
-                HorizontalOptions="Start" 
-                Command="{Binding StopSleepTimerCommand}"
-                IsVisible="{Binding IsSleepTimerRunning}"
-                />
+    <Grid Grid.Row="0" IsVisible="{Binding IsMenuOpen}" BackgroundColor="{AppThemeBinding Dark=#E6000000, Light=#E6FFFFFF}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Grid.GestureRecognizers>
+            <TapGestureRecognizer Command="{Binding ToogleMenuCommand}" />
+        </Grid.GestureRecognizers>
 
-        <Button Grid.Column="1" 
-                Text="{x:Static r:Strings.SleepTimer_Increase_5min}"
-                HorizontalOptions="Start" 
-                Margin="8,0,0,0"
-                Command="{Binding IncreaseSleepTimerCommand}"
-                IsVisible="{Binding IsSleepTimerRunning}"
-                />
+        <Grid Grid.Row="0" 
+              Padding="8" 
+              ColumnDefinitions="auto, auto, auto, *, auto" 
+              Grid.ColumnSpan="3"
+              IsVisible="{Binding IsMenuOpen}">
 
-        <Grid Grid.Column="2" IsVisible="{OnPlatform Default=False, WinUI=True}">
-            <Button Text="{x:Static r:Strings.SleepTimer_Decrease_5min}"
+            <Grid RowDefinitions="auto, auto" ColumnDefinitions="auto, *, auto">
+
+                <Grid.GestureRecognizers>
+                    <TapGestureRecognizer />
+                </Grid.GestureRecognizers>
+
+                <Picker 
+                    Grid.Row="0"
+                    Grid.ColumnSpan="3"
+                    ItemsSource="{Binding SleepTimes}"
+                    SelectedIndex="{Binding SleepTimeIndex, Mode=TwoWay}"
+                    Margin="{OnPlatform Default='0', WinUI='0,6,0,0'}"
+                    IsVisible="{Binding IsSleepTimerNotRunning}"
+                    />
+
+                <Button 
+                    Grid.Row="0"
+                    Grid.ColumnSpan="3"
+                    Style="{StaticResource HyperlinkButton}"
+                    Text="{Binding StopSleepTimerText}" 
+                    HorizontalOptions="Start" 
+                    Command="{Binding StopSleepTimerCommand}"
+                    IsVisible="{Binding IsSleepTimerRunning}"
+                    />
+
+                <Button 
+                    Grid.Row="1"
+                    Grid.Column="0"
+                    Style="{StaticResource HyperlinkButton}"
+                    Text="{x:Static r:Strings.SleepTimer_Increase_5min}"
+                    HorizontalOptions="Start" 
+                    Margin="0,0,0,0"
+                    Command="{Binding IncreaseSleepTimerCommand}"
+                    IsVisible="{Binding IsSleepTimerRunning}"
+                    />
+
+                <Button 
+                    Grid.Row="1"
+                    Grid.Column="2"
+                    Text="{x:Static r:Strings.SleepTimer_Decrease_5min}"
+                    Style="{StaticResource HyperlinkButton}"
                     HorizontalOptions="Start" 
                     Margin="8,0,0,0"
                     Command="{Binding DecreaseSleepTimerCommand}"
                     IsVisible="{Binding IsSleepTimerRunning}"
                     />
+
+            </Grid>
+
+            <Picker Grid.Column="4"
+                    ItemsSource="{Binding PlaybackRateOptions}"
+                    SelectedIndex="{Binding PlaybackRateIndex, Mode=TwoWay}"
+                    Margin="{OnPlatform Default='0', WinUI='0,6,0,0'}"
+                    IsVisible="{Binding IsCurrentItemEpisode}"
+                    />
         </Grid>
 
-        <Picker Grid.Column="4"
-                ItemsSource="{Binding PlaybackRateOptions}"
-                SelectedIndex="{Binding PlaybackRateIndex, Mode=TwoWay}"
-                Margin="{OnPlatform Default='0', WinUI='0,6,0,0'}"
-                IsVisible="{Binding IsCurrentItemEpisode}"
-                />
+        <views:CurrentPlayingLargeControl Grid.Row="2" />
     </Grid>
 
-    <views:CurrentPlayingControl Grid.Row="4" />
+    <Grid Grid.Row="1" BackgroundColor="{AppThemeBinding Dark={StaticResource PanelBackgroundDark}, Light={StaticResource PanelBackgroundLight}}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="Auto" />
+        </Grid.ColumnDefinitions>
 
-    <Button Grid.Row="4" Command="{Binding ToogleMenuCommand}" BackgroundColor="Transparent" BorderColor="Transparent" BorderWidth="0" />
 
-    <Grid Grid.Row="4"
-          Grid.Column="1"
-          Margin="8,0,0,0"
-          IsVisible="{Binding IsBuffering}"
-            >
-        <ActivityIndicator 
-                IsRunning="{Binding IsBuffering}"
-                WidthRequest="{OnPlatform Default=28, WinUI=24}"
-                HeightRequest="{OnPlatform Default=28, WinUI=24}"
-                />
+        <views:CurrentPlayingControl Grid.Row="4" />
 
-        <Label Grid.Column="1" 
-               Text="{Binding BufferPercent}"
-               FontSize="{OnPlatform Default=8, WinUI=9}"
-               Margin="{OnPlatform Default='0,0,1,1', WinUI='0,0,2,1'}"
-               HorizontalOptions="Center"
-               VerticalOptions="Center"
-               />
-    </Grid>
+        <Button Grid.Row="4" Command="{Binding ToogleMenuCommand}" BackgroundColor="Transparent" BorderColor="Transparent" BorderWidth="0" />
+
+        <Grid Grid.Row="4"
+              Grid.Column="1"
+              Margin="8,0,0,0"
+              IsVisible="{Binding IsBuffering}"
+                >
+            <ActivityIndicator 
+                    IsRunning="{Binding IsBuffering}"
+                    WidthRequest="{OnPlatform Default=28, WinUI=24}"
+                    HeightRequest="{OnPlatform Default=28, WinUI=24}"
+                    />
+
+            <Label Grid.Column="1" 
+                   Text="{Binding BufferPercent}"
+                   FontSize="{OnPlatform Default=8, WinUI=9}"
+                   Margin="{OnPlatform Default='0,0,1,1', WinUI='0,0,2,1'}"
+                   HorizontalOptions="Center"
+                   VerticalOptions="Center"
+                   />
+        </Grid>
     
-    <views:PlayerButtonsControl Grid.Row="4" Grid.Column="2" />
+        <views:PlayerButtonsControl Grid.Row="4" Grid.Column="2" />
 
-    <views:PlayerPositionControl Grid.Row="5" Grid.ColumnSpan="3" IsVisible="{Binding IsCurrentItemEpisode}" />
+        <views:PlayerPositionControl Grid.Row="5" Grid.ColumnSpan="3" IsVisible="{Binding IsCurrentItemEpisode}" />
+
+    </Grid>
 </Grid>
